syntax = "proto3";

package demo.proto;

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;

// user.proto
message User {
    int32 id = 1;
    string name = 2;
    repeated string items = 3;
}

enum SomeEnum {
    A = 0;
}
